<resources>
    <string name="app_name">TestAcaziaSoft</string>
    <string name="text_app_slogan">Welcom Back!</string>
    <string name="text_login_with">Login with</string>
    <string name="hint_your_phone_number">Your phone number</string>
    <string name="hint_password">Password</string>
    <string name="text_remember_me">Remember me</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_login">LOGIN</string>
    <string name="text_or_login_with">or Login with</string>
    <string name="text_signup_here">Not a Turino user yet? <b>Signup here</b></string>
    <string name="title_notify">Notify!</string>
    <string name="msg_logout">Do you want to logout?</string>
</resources>